fix: dropdown covered by other layer in the bottom of messageList container uncomment line 140,141: rerender row when receiving new message

--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/styles.scss
@@ -50,8 +50,9 @@
   padding-bottom: 0px;
 }
 
+// change padding-bottom when adding new dropdown item
 .messageList section:last-child{
-  padding-bottom: 60px;
+  padding-bottom: 80px;
 }
 
 .unreadButton {
